--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>REAL SHIT - Krmax</title>
+  <title>REAL SHIT - krmax</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
     body {
@@ -60,7 +60,7 @@
 <body>
   <div class="container">
     <h1>REAL SHIT</h1>
-    <p>Escucha REAL SHIT de Krmax en todos lados</p>
+    <p>Escucha REAL SHIT de krmax en todos lados</p>
     <img src="portada.jpg" alt="Portada de REAL SHIT">
     <div class="links">
       <a href="https://open.spotify.com/artist/tu-id" target="_blank">Spotify</a>
