--- a/index.html
+++ b/index.html
@@ -5,55 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>REAL SHIT - krmax</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
+
     body {
       margin: 0;
       background-color: #000;
       color: white;
-      font-family: 'Roboto Condensed', sans-serif;
+      font-family: 'UnifrakturCook', cursive;
       text-align: center;
     }
+
     .container {
       padding: 20px;
       max-width: 800px;
       margin: auto;
     }
+
     img {
       max-width: 100%;
       height: auto;
       margin-top: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 25px rgba(255, 0, 0, 0.6);
+      box-shadow: 0 0 25px rgba(0, 102, 255, 0.6);
       animation: pulse 3s infinite;
     }
+
     h1 {
-      font-size: 3rem;
+      font-size: 4rem;
       margin: 20px 0 10px;
+      letter-spacing: 2px;
     }
+
     p {
-      font-size: 1.2rem;
+      font-size: 1.5rem;
       margin-bottom: 30px;
       color: #ccc;
+      font-family: Arial, sans-serif;
     }
+
     .links a {
       display: block;
       margin: 10px auto;
       padding: 12px 20px;
       max-width: 250px;
-      background-color: red;
+      background-color: #0066ff;
       color: white;
       text-decoration: none;
       font-weight: bold;
+      font-family: Arial, sans-serif;
       border-radius: 5px;
       transition: 0.3s;
     }
+
     .links a:hover {
-      background-color: darkred;
+      background-color: #0040aa;
     }
+
     @keyframes pulse {
-      0% { box-shadow: 0 0 15px rgba(255, 0, 0, 0.6); }
-      50% { box-shadow: 0 0 35px rgba(255, 0, 0, 0.9); }
-      100% { box-shadow: 0 0 15px rgba(255, 0, 0, 0.6); }
+      0% { box-shadow: 0 0 15px rgba(0, 102, 255, 0.6); }
+      50% { box-shadow: 0 0 35px rgba(0, 102, 255, 0.9); }
+      100% { box-shadow: 0 0 15px rgba(0, 102, 255, 0.6); }
     }
   </style>
 </head>
@@ -61,12 +72,13 @@
   <div class="container">
     <h1>REAL SHIT</h1>
     <p>Escucha REAL SHIT de krmax en todos lados</p>
-    <img src="portada.jpg" alt="Portada de REAL SHIT">
+    <img src="portada.jpg" alt="REAL SHIT ALBUM COVER">
     <div class="links">
-      <a href="https://open.spotify.com/artist/tu-id" target="_blank">Spotify</a>
-      <a href="https://music.apple.com/artist/tu-id" target="_blank">Apple Music</a>
-      <a href="https://www.deezer.com/artist/tu-id" target="_blank">Deezer</a>
-      <a href="https://tidal.com/browse/artist/tu-id" target="_blank">Tidal</a>
+      <a href="https://open.spotify.com/intl-es/artist/0JyVaFxwPjHctiBnfQxo0x" target="_blank">Spotify</a>
+      <a href="https://music.apple.com/ar/artist/krmax/1761421449" target="_blank">Apple Music</a>
+      <a href="https://www.deezer.com/en/artist/107953092" target="_blank">Deezer</a>
+      <a href="https://music.amazon.es/artists/B0D9C1J67H/krmax" target="_blank">Amazon</a>
+      <a href="https://soundcloud.com/krmaxx" target="_blank">Soundcloud</a>
     </div>
   </div>
 </body>
