--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>REAL SHIT - krmax</title>
+  <title>REAL SHIT - Álbum de krmax</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
 
@@ -71,8 +71,10 @@
 <body>
   <div class="container">
     <h1>REAL SHIT</h1>
+    <img src="realshitlogo.jpg" alt="Logo REAL SHIT">
     <p>Escucha REAL SHIT de krmax en todos lados</p>
-    <img src="portada.jpg" alt="REAL SHIT ALBUM COVER">
+    <img src="portada.jpg" alt="Portada del álbum">
+    <img src="Picsart_25-07-29_06-35-52-297.jpg" alt="REAL SHIT ALBUM COVER">
     <div class="links">
       <a href="https://open.spotify.com/intl-es/artist/0JyVaFxwPjHctiBnfQxo0x" target="_blank">Spotify</a>
       <a href="https://music.apple.com/ar/artist/krmax/1761421449" target="_blank">Apple Music</a>
@@ -83,3 +85,5 @@
   </div>
 </body>
 </html>
+
+
