--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>REAL SHIT</h1>
+    <h1>KRMAX</h1>
     <img src="realshitlogo.jpg" alt="Logo REAL SHIT">
     <p>Escucha REAL SHIT de krmax en todos lados</p>
-    <img src="portada.jpg" alt="Portada del álbum">
-    <img src="Picsart_25-07-29_06-35-52-297.jpg" alt="REAL SHIT ALBUM COVER">
+    <img src="portadala.png" alt="ALBUM COVER">
     <div class="links">
       <a href="https://open.spotify.com/intl-es/artist/0JyVaFxwPjHctiBnfQxo0x" target="_blank">Spotify</a>
       <a href="https://music.apple.com/ar/artist/krmax/1761421449" target="_blank">Apple Music</a>
