--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
       <a href="https://www.deezer.com/en/artist/107953092" target="_blank">Deezer</a>
       <a href="https://music.amazon.es/artists/B0D9C1J67H/krmax" target="_blank">Amazon</a>
       <a href="https://soundcloud.com/krmaxx" target="_blank">Soundcloud</a>
+      <a href="https://music.youtube.com/channel/UC-X-WhTSME_njE3wxDYmGIA?si=3yQGfHdoyK2EQjch" target="_blank">YouTube Music</a>
+      <a href="https://www.youtube.com/@krmaxxx" target="_blank">YouTube</a>
     </div>
   </div>
 </body>
